--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,13 @@ python = "^3.6"
 fastapi = "^0.61.2"
 Jinja2 = "^2.11.2"
 aiofiles = "^0.6.0"
+watchgod = "^0.7"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.8.3"
 black = "^20.8b1"
 pylint = "^2.6.0"
-uvicorn = "^0.12.3"
+uvicorn = "^0.15"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
