--- a/package.json
+++ b/package.json
@@ -1,22 +1,17 @@
 {
-  "name": "labs",
-  "version": "1.1.0",
-  "main": "index.js",
-  "repository": "git@gitlab.com:slipmatio/slipmat-labs.git",
-  "author": "Ville Säävuori <ville@unessa.net>",
-  "license": "MIT",
+  "name": "slipmat-labs",
   "private": true,
+  "version": "0.3.0",
+  "type": "module",
   "scripts": {
-    "dev": "vite --host 0.0.0.0",
-    "frontend": "vite --host 0.0.0.0",
-    "backend": "uvicorn api.index:app --reload --reload-include *.html",
-    "build": "vite build && node postbuild.js"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "dependencies": {
-    "@tailwindcss/typography": "^0.4.1",
-    "autoprefixer": "^10",
-    "postcss": "^8",
-    "tailwindcss": "^2",
-    "vite": "^2.6.4"
+  "devDependencies": {
+    "autoprefixer": "10.4.16",
+    "postcss": "8.4.31",
+    "tailwindcss": "3.3.5",
+    "vite": "4.5.0"
   }
 }
