--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "slipmat-labs",
-  "private": true,
-  "version": "0.3.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "autoprefixer": "10.4.16",
-    "postcss": "8.5.1",
-    "tailwindcss": "3.4.3",
-    "vite": "4.5.0"
-  }
+	"name": "slipmat-labs",
+	"private": true,
+	"version": "0.3.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview"
+	},
+	"devDependencies": {
+		"@tailwindcss/vite": "^4.0.12",
+		"tailwindcss": "^4.0.12",
+		"vite": "^6.2.1"
+	}
 }
