--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,21 +15,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/cache@v3
+      - uses: actions/checkout@v4.2.2
+      - uses: actions/cache@v4.2.2
         with:
           path: /home/runner/.local/share/pnpm/store
           key: ${{ runner.os }}-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-
-      - uses: pnpm/action-setup@v2
+      - uses: pnpm/action-setup@v4.1.0
         with:
-          version: 8
+          version: 10
           run_install: true
-      - uses: actions/setup-node@v3
+      - uses: actions/setup-node@v4.2.0
         with:
           node-version: 20
-          cache: 'pnpm'
+          cache: "pnpm"
 
       - name: Build
         run: pnpm build
